[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/title/title_screen.gd" id="1"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0313726, 0.0392157, 0.0901961, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 428.0
offset_top = 72.0
offset_right = 852.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 48
text = "煙の向こう側"
horizontal_alignment = 1

[node name="PackiiPlaceholder" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 500.0
offset_top = 170.0
offset_right = 780.0
offset_bottom = 430.0
color = Color(0.427451, 0.298039, 0.329412, 1)

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 500.0
offset_top = 460.0
offset_right = 780.0
offset_bottom = 650.0
theme_override_constants/separation = 12

[node name="NewGameButton" type="Button" parent="Menu"]
layout_mode = 2
text = "▶ はじめから"

[node name="ContinueButton" type="Button" parent="Menu"]
layout_mode = 2
text = "▶ つづきから"

[node name="SettingsButton" type="Button" parent="Menu"]
layout_mode = 2
text = "▶ 設定"

[node name="QuitButton" type="Button" parent="Menu"]
layout_mode = 2
text = "▶ 終了"

[node name="InfoLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 20.0
offset_top = 680.0
offset_right = 580.0
offset_bottom = 712.0
text = ""

[node name="CopyrightLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 1120.0
offset_top = 690.0
offset_right = 1260.0
offset_bottom = 715.0
text = "(c) 20XX"

[node name="SettingsPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = 390.0
offset_top = 170.0
offset_right = 890.0
offset_bottom = 530.0

[node name="SettingsContent" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SettingsTitle" type="Label" parent="SettingsPanel/SettingsContent"]
layout_mode = 2
text = "設定"
horizontal_alignment = 1

[node name="BGMLabel" type="Label" parent="SettingsPanel/SettingsContent"]
layout_mode = 2
text = "BGM音量"

[node name="BGMSlider" type="HSlider" parent="SettingsPanel/SettingsContent"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SELabel" type="Label" parent="SettingsPanel/SettingsContent"]
layout_mode = 2
text = "SE音量"

[node name="SESlider" type="HSlider" parent="SettingsPanel/SettingsContent"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="TextSpeedLabel" type="Label" parent="SettingsPanel/SettingsContent"]
layout_mode = 2
text = "テキスト速度"

[node name="TextSpeedSlider" type="HSlider" parent="SettingsPanel/SettingsContent"]
unique_name_in_owner = true
layout_mode = 2
min_value = 10.0
max_value = 120.0
step = 1.0
value = 30.0

[node name="CloseSettingsButton" type="Button" parent="SettingsPanel/SettingsContent"]
layout_mode = 2
text = "閉じる"

[connection signal="pressed" from="Menu/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Menu/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Menu/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsPanel/SettingsContent/CloseSettingsButton" to="." method="_on_close_settings_pressed"]
